--- a/package.json
+++ b/package.json
@@ -18,10 +18,17 @@
   },
   "homepage": "https://github.com/fdsosa/proyecto-cv#readme",
   "dependencies": {
-    "express": "^4.17.1",
-    "gulp": "^4.0.2"
+    "express": "^4.17.1"
   },
   "devDependencies": {
-    "nodemon": "^1.19.1"
+    "browser-sync": "^2.26.5",
+    "gulp": "^4.0.2",
+    "gulp-clean": "^0.4.0",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-sass": "^4.0.2",
+    "gulp-teddy": "^1.6.1",
+    "node-sass": "^4.12.0",
+    "nodemon": "^1.19.1",
+    "sass": "^1.20.3"
   }
 }
