--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "gulp build:prod",
-    "dev": "nodemon server.js",
+    "dev": "gulp build:dev && nodemon server.js",
+    "serve:dev": "nodemon server.js",
     "start": "node server.js"
   },
   "repository": {
@@ -20,10 +21,16 @@
   },
   "homepage": "https://github.com/fdsosa/proyecto-cv#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "bcrypt": "^3.0.6",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mongodb": "^3.3.0-beta2",
+    "mongoose": "^5.6.6",
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
-    "browser-sync": "^2.26.5",
+    "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
     "gulp-htmlmin": "^5.0.1",
